2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Rename epc_tls_privkey_* functions to epc_tls_private_key_*,
	which results in same symbol length for private key and
	equivalent certificate functions.

	* docs/reference/libepc/libepc-sections.txt: Updating symbols.
	* libepc/tls.c, libepc/tls.h, libepc-ui/entropy-progress.c:
	Rename epc_tls_privkey_* functions to epc_tls_private_key_*.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcPublication to EpcResource in EpcPublisher.

	* libepc/publisher.c: Rename EpcPublication to EpcResource.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Show a progress window when generating new keys.

	* examples/server-credentials.c: Use EpcEntropyProgress.
	* libepc-ui/passworddialog.c, libepc-ui/passworddialog.h,
	examples/test-consumer.c: Rename files to password-dialog.
	* libepc/tls.c, libepc/tls.h: Add epc_tls_privkey_set_hooks which
	allows showing of a progress window when generating private keys.
	* libepc-ui/entropy-progress.c, libepc-ui/entropy-progress.h,
	Makefile.am: Add EpcEntropyProgress, which can be shown when
	generating keys.

2007-11-07  Mathias Hasselmann  <mathias@openismus.com>

	Create simple API for creating, storing and loading server keys.

	* configure.in: Add gnutls package.
	* libepc/tls.c, libepc/tls.h: Simple server key API.
	* examples/.gitignore: Add server-credentials
	* examples/server-credentials.c: Demonstrate how to
	retreive self-signed SSL/TLS server credentials.
	* docs/reference/libepc/libepc-docs.sgml: Add new chapters.
	* docs/reference/libepc/libepc-sections.txt: Add new symbols.
	* Makefile.am: Add libepc/tls.c, libepc/tls.h and
	examples/server-credentials.c.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>

	Prevent that make tries to build API docs before building the library.

	* Makefile.am: Explicitly list the rules of gtk-doc.make.

2007-11-06  Mathias Hasselmann  <mathias@openismus.com>
